Moved getting person and group id to after login so it doesn't run every time someone accesses Qhandler.  Make previous and next page on search results actually work.  Still need to do a lot to optimize scanning items in.